# api/app/Http/Schemas/TasksSchemas.php
@@ -2,14 +2,15 @@
 
 namespace App\Http\Schemas;
 
-class TasksSchema{}
+class TasksSchemas{}
 
 /**
  * @OA\Schema(
  *      schema="TasksResponse",
  *      type="object",
  *      @OA\Property(property="id", type="integer"),
- *      @OA\Property(property="responsible", type="object", ref="#/components/schemas/UserResponse"),
+ *      @OA\Property(property="creator", type="object", ref="#/components/schemas/UserResponse"),
+ *      @OA\Property(property="addressee", type="object", ref="#/components/schemas/UserResponse"),
  *      @OA\Property(property="content", type="string"),
  *      @OA\Property(property="status", type="string"),
  * )
@@ -20,7 +21,8 @@ class TasksResponse{}
  * @OA\Schema(
  *      schema="TasksRequest",
  *      type="object",
- *      @OA\Property(property="responsible", type="integer"),
+ *      @OA\Property(property="creator", type="integer"),
+ *      @OA\Property(property="addressee", type="integer"),
  *      @OA\Property(property="content", type="string"),
  *      @OA\Property(property="status", type="string"),
  * )
